force-app/main/default/objects/Contact/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>TEXT(IF(YEAR(Today())=YEAR(Birthdate),0,IF(YEAR(Today())-YEAR(Birthdate)=1,IF(MONTH(Today())=MONTH(Birthdate),IF(DAY(Today())&lt;DAY(Birthdate),0,1),IF(MONTH(Today())&lt;MONTH(Birthdate),IF(DAY(Today())&lt;DAY(Birthdate),1,0),1)),IF(MONTH(Today())-MONTH(Birthdate)&lt;0,YEAR(Today())-YEAR(Birthdate)-1,IF(MONTH(Today())=MONTH(Birthdate),IF(DAY(Today())&lt;DAY(Birthdate),YEAR(Today())-YEAR(Birthdate)-1,YEAR(Today())-YEAR(Birthdate)),YEAR(Today())-YEAR(Birthdate)))))) &amp; &quot; year(s), &quot; &amp;

TEXT(IF(YEAR(Today())=YEAR(Birthdate),IF(MONTH(Today())=MONTH(Birthdate),0,IF(MONTH(Today())&gt;MONTH(Birthdate),IF(DAY(Today())&lt;DAY(Birthdate),MONTH(Today())-MONTH(Birthdate)-1,MONTH(Today())-MONTH(Birthdate)),0)),IF(MONTH(Today())=MONTH(Birthdate),IF(DAY(Today())&lt;DAY(Birthdate),11,0),IF(MONTH(Today())&gt;MONTH(Birthdate),IF(DAY(Today())&lt;DAY(Birthdate),MONTH(Today())-MONTH(Birthdate)-1,MONTH(Today())-MONTH(Birthdate)),IF(MONTH(Today())&lt;MONTH(Birthdate),IF(DAY(Today())&lt;DAY(Birthdate),11-(MONTH(Birthdate)-MONTH(Today())),12-(MONTH(Birthdate)-MONTH(Today()))),12-(MONTH(Birthdate)-MONTH(Today()))))))) &amp; &quot; month(s), &amp; &quot; &amp;

TEXT(IF(DAY(Today())&gt;=DAY(Birthdate),DAY(Today())-DAY(Birthdate),31-(DAY(Birthdate)-DAY(Today())))) &amp; &quot; day(s)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <type>Text</type>
</CustomField>