force-app/main/default/objects/Contact/fields/current_age__c.field-meta.xml
<CustomField>
    <fullName>current_age__c</fullName>
    <formula>IF(NOT(ISNULL(Birthdate)), 
TEXT(FLOOR((TODAY()-Birthdate)/365.2425)) &amp; &quot; year(s), &quot; &amp;
TEXT(FLOOR(MOD((TODAY()-Birthdate),365.2425)/30)) &amp; &quot; month(s),&quot; &amp; 
TEXT (Floor(MOD(Floor(MOD((TODAY()-Birthdate),365.2425)),7))) &amp; &quot; Week(s), &quot;&amp;

TEXT (Floor(MOD(Floor(MOD((TODAY()-Birthdate),365.2425)),30))) &amp; &quot; day(s), &quot; ,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>current age</label>
    <type>Text</type>
</CustomField>