force-app/main/default/objects/Contact/fields/LastEmailSentTime__c.field-meta.xml
<CustomField>
    <fullName>LastEmailSentTime__c</fullName>
    <label>LastEmailSentTime</label>
    <type>DateTime</type>
</CustomField>