force-app/main/default/objects/Contact/fields/LastTaskCreatedTime__c.field-meta.xml
<CustomField>
    <fullName>LastTaskCreatedTime__c</fullName>
    <label>LastTaskCreatedTime</label>
    <type>DateTime</type>
</CustomField>