force-app/main/default/objects/Contact/fields/MESSENGER__ErstellDatum__c.field-meta.xml
<CustomField>
    <fullName>MESSENGER__ErstellDatum__c</fullName>
    <label>Created Date</label>
    <type>Date</type>
</CustomField>