force-app/main/default/objects/Contact/fields/MESSENGER__Kundengruppe__c.field-meta.xml
<CustomField>
    <fullName>MESSENGER__Kundengruppe__c</fullName>
    <label>Customer Group</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>House Owner</fullName>
            </value>
            <value>
                <fullName>Kids</fullName>
            </value>
            <value>
                <fullName>Married</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>