force-app/main/default/objects/Contact/fields/MESSENGER__Kundenkarte__c.field-meta.xml
<CustomField>
    <fullName>MESSENGER__Kundenkarte__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Loyalty Program</label>
    <type>Checkbox</type>
</CustomField>