force-app/main/default/objects/Contact/fields/MESSENGER__Product_Id__c.field-meta.xml
<CustomField>
    <fullName>MESSENGER__Product_Id__c</fullName>
    <label>Product Id</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>