force-app/main/default/objects/Contact/fields/Play_Video__c.field-meta.xml
<CustomField>
    <fullName>Play_Video__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Play Video</label>
    <type>Checkbox</type>
</CustomField>