force-app/main/default/objects/Contact/fields/Status_Amt__c.field-meta.xml
<CustomField>
    <fullName>Status_Amt__c</fullName>
    <label>Status_Amt</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>