force-app/main/default/objects/Contact/validationRules/Contact_must_be_in_Account_ZIP_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_must_be_in_Account_ZIP_Code</fullName>
    <active>false</active>
    <errorConditionFormula>AND(NOT (ISBLANK (AccountId)),  MailingPostalCode &lt;&gt;   Account.ShippingPostalCode )</errorConditionFormula>
    <errorMessage>Insertion is not possible, mailing postal code is different from the account&apos;s shipping postal code.</errorMessage>
</ValidationRule>